# rapid-textrank

./: .gitignore  404.html  AGENTS.md  Cargo.toml  LICENSE  README.md  exports.toml  index.html  pyproject.toml  sitemap.xml
.github/workflows/: CI.yml
algorithms/: index.html
algorithms/base-textrank/: index.html
algorithms/biased-textrank/: index.html
algorithms/choosing-a-variant/: index.html
algorithms/how-textrank-works/: index.html
algorithms/multipartite-rank/: index.html
algorithms/position-rank/: index.html
algorithms/single-rank/: index.html
algorithms/topic-rank/: index.html
algorithms/topical-pagerank/: index.html
api/: index.html
api/extract-keywords/: index.html
api/extractor-classes/: index.html
api/json-interface/: index.html
api/result-objects/: index.html
api/spacy-integration/: index.html
api/supported-languages/: index.html
api/textrank-config/: index.html
api/topic-utilities/: index.html
architecture/composition-matrix/: index.html
architecture/debug-introspection/: index.html
architecture/pipeline/: index.html
architecture/production-hardening/: index.html
benches/: benchmark.rs
development/contributing/: index.html
docs/algorithms/: choosing-a-variant.md  index.md
getting-started/: index.html
notebooks/: 01_quickstart.ipynb  02_algorithm_variants.ipynb  03_explain_algorithm.ipynb  04_benchmarks.ipynb  testpypi_demo.ipynb
performance/: index.html
search/: search_index.json
src/: cache.rs  clustering.rs  errors.rs  lib.rs  types.rs
tests/: integration_tests.rs  property_tests.rs
(+57 files in other folders)
