[package]
name = "rust_textrank"
version = "0.1.0"
edition = "2021"
authors = ["TextRanker Contributors"]
description = "High-performance TextRank implementation with Python bindings"
license = "MIT"
repository = "https://github.com/textranker/rust_textrank"
keywords = ["nlp", "textrank", "keyword-extraction", "summarization"]
categories = ["text-processing", "science"]

[lib]
name = "rust_textrank"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
unicode-segmentation = "1.11"
rayon = "1.10"
parking_lot = "0.12"
rustc-hash = "2.0"
stop-words = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
